--- a/public/css/home.css
+++ b/public/css/home.css
@@ -54,7 +54,7 @@ header,footer {
 }
 header {
 margin-bottom: 3em;
-pdadding: 3em 0 2em;
+padding: 2em 0 ;
 }
 header h1,header p {
 width: 960px;
@@ -66,6 +66,10 @@ footer { margin-top: 5em; }
 
 /* Basic Font Styles
 ----------------------------------------------------------------------------*/
+.wrap {
+    display: flex;
+	justify-content: space-between;
+}
 a {
 font-family: 'Cooper Black W01';
 color: #fbf7e7;
@@ -74,7 +78,8 @@ border-radius: 6px;
 border: none;
 padding: 3em;
 display:inline-block;
-margin-left:.75em;
+margin-left:1.75em;
+margin-right:1.75em;
 font-size: 1.75em;
 line-height: 1em;
 letter-spacing: -.08em;
