--- a/App/Views/Student/listall.html
+++ b/App/Views/Student/listall.html
@@ -3,32 +3,31 @@
 
 {% block title %}Student list{% endblock %}
 
-{%block body %}
+{% block body %}
 
   <h3>Complete list of Students Registered at VU</h3>
   </header>
-    <a href = "../student"><button>Back to Main page</button></a>
+    <a href = "../student"><button>Back to Main Student Section</button></a>
 
  <table>
  <tr>
   <th>Roll Number</th>
-  <th><a href = "<?php echo($data['actionPath'] . '/first_name'); ?>">First Name</a></th>
-  <th><a href = "<?php echo($data['actionPath'] . '/last_name'); ?>">Last Name</a></th>
-  <th><a href = "<?php echo($data['actionPath'] . '/semester'); ?>">Semester</a></th>
-  <th><a href = "<?php echo($data['actionPath'] . '/major'); ?>">Major</a></th>
-  <th><a href = "<?php echo($data['actionPath'] . '/grade'); ?>">Grade</a></th>
+  <th><a href = "{{ column.first_name }}">First Name</a></th>
+  <th><a href = "{{ column.last_name }}">Last Name</a></th>
+  <th><a href = "{{ column.semester }}">Semester</a></th>
+  <th><a href = "{{ column.major }}">Major</a></th>
+  <th><a href = "{{ column.grade }}">Grade</a></th>
   <th>Update</th>
  </tr>
-
   
-  {% for column in list %} 
-  echo "<tr>"; 
-  echo "<td>{{ column.roll_number }}</td>";
-  echo "<td>{{ column.first_name }}</td>";
-  echo "<td>{{ column.last_name }} </td>";
-  echo "<td>{{ column.semester }}</td>";
-  echo "<td>{{ column.major }}</td>";
-  echo "<td>{{ column.grade }}</td>";
+{% for column in list %} 
+  <tr> 
+  <td>{{ column.roll_number }}</td>
+  <td>{{ column.first_name }}</td>
+  <td>{{ column.last_name }} </td>
+  <td>{{ column.semester }}</td>
+  <td>{{ column.major }}</td>
+  <td>{{ column.grade }}</td>
   <td><a href = " <?php echo ('../edit/' . $value['roll_number']); ?>" >EDIT</a>
    <a href ="<?php echo ('../delete/' . $value['roll_number']); ?> " >DELETE</a></td>
   </tr>
